Fixed button text alignment issue for 'play again' button

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -802,6 +802,9 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
